Ajout de la section hero comportant lestitresetle formulaire derecherche sur la page html et ajout des styles CSS.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
             </nav>
         </header>
         <main>
+            <section class="hero">
+                <div class="hero-title">
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre-ville ou en plein nature</p>
+                </div>
+                <form action="#" method="post">
+                    <div><i class="fa-solid fa-location-dot"></i></div>
+                    <input type="search" placeholder="Marseille, france">
+                    <button>Rechercher</button>
+
+                </form>
+                <div class="filters">
+                    <h2>Filtres</h2>
+                    <div class="filters-list">
+                        <div class="filter-econoy">
+                            <i class="fa-solid fa-money-bill-wave"></i>
+                            Économique
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
