Ajout des filtres et de la ligne de texte d'information sur la page HTML et du style CSS correspondant.

--- a/index.html
+++ b/index.html
@@ -36,16 +36,35 @@
 
                 </form>
                 <div class="filters">
-                    <h2>Filtres</h2>
+                    <h2 class="section-title">Filtres</h2>
                     <div class="filters-list">
-                        <div class="filter-econoy">
+                        <div class="filter-container">
                             <i class="fa-solid fa-money-bill-wave"></i>
-                            Économique
+                            <span>Économique</span>
+                        </div>
+
+                        <div class="filter-container">
+                            <i class="fa-solid fa-person"></i>
+                            <span>Familial</span>
+                        </div>
+
+                        <div class="filter-container">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>Romantique</span>
+                        </div>
+
+                        <div class="filter-container pepites-width">
+                            <i class="fa-solid fa-fire"></i>
+                            <span>Nos pépites</span>
                         </div>
                     </div>
                 </div>
+                <div class="infos">
+                    <div class="infos-icon"><i class="fa-solid fa-info"></i></div>
+                    <span>Plus de 500 logements sont disponibles dans cette ville </span>
+                </div>
             </section>
-            <div class="hebergements-and-populaires">
+            <div class="hebergements-and-populaires" id="#hebergements">
                 <section class="hebergements">
 
                 </section>
