Mise en place de la section "Activités" en html et css.

--- a/index.html
+++ b/index.html
@@ -250,6 +250,49 @@
                     </div>
                 </section>
             </div>
+            <section class="activity">
+                <div class="activity-title">
+                    <h2>Activités à Marseille</h2>
+                </div>
+                <div class="activity-list">
+                    <div class="activity-list-card">
+                        <div class="activity-card">
+                            <img src="./images/activites/reno-laithienne.jpg" alt="Photo du Vieux Port">
+                            <div class="activity-text">
+                                <p>Vieux-Port</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="activity-list-card">
+                        <div class="activity-card">
+                            <img src="./images/activites/paul-hermann.jpg" alt="Photo du Fort de Pomègues">
+                            <div class="activity-text">
+                                <p>Fort de Pomègues</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="activity-list-card">
+                        <div class="activity-card">
+                            <img src="./images/activites/kilyan-sockalingum.jpg"
+                                alt="Photo du Parc National des Calanques">
+                            <div class="activity-text">
+                                <p>Parc national des Calanques</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="activity-list-card">
+                        <div class="activity-card">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Photo de Notre Dame de la Garde">
+                            <div class="activity-text">
+                                <p>Notre-Dame-de-la-garde</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </div>
