--- a/index.html
+++ b/index.html
@@ -293,8 +293,28 @@
                     </div>
                 </div>
             </section>
+
         </main>
-        <footer></footer>
+        <footer>
+            <div class="a-propos">
+                <h3>À propos</h3>
+                <a href="#">Fonctionement du site</a>
+                <a href="#">Conditions générales de ventes</a>
+                <a href="#">Données et confidentialités</a>
+            </div>
+
+            <div class="charte">
+                <h3>Nos hébergements</h3>
+                <a href="#">Charte qualité</a>
+                <a href="#">Soumettre votre hotel</a>
+            </div>
+
+            <div class="assistance">
+                <h3>Assistance</h3>
+                <a href="#">Centre d'aide</a>
+                <a href="#">Nous contacter</a>
+            </div>
+        </footer>
     </div>
 </body>
 
