Correction de bug sur la partie hebergement, activité et les liens.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <img src="./images/logo/Booki.png" alt="Logo de Booki" class="logo">
             <nav>
-                <a href="#hebergements">Hébergements</a>
+                <a href="#hebergements" class="selected">Hébergements</a>
                 <a href="#Activites">Activités</a>
             </nav>
         </header>
