Finalisation de la version desktop.

--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
             <div class="a-propos">
                 <h3>À propos</h3>
                 <a href="#">Fonctionement du site</a>
-                <a href="#">Conditions générales de ventes</a>
-                <a href="#">Données et confidentialités</a>
+                <a href="#">Conditions générales</a>
+                <a href="#">Données et confidentialité</a>
             </div>
 
             <div class="charte">
                 <h3>Nos hébergements</h3>
                 <a href="#">Charte qualité</a>
-                <a href="#">Soumettre votre hotel</a>
+                <a href="#">Proposer votre hotel</a>
             </div>
 
             <div class="assistance">
