mise en place de la version mobile du header et de la barre de recherche

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <img src="./images/logo/Booki.png" alt="Logo de Booki" class="logo">
             <nav>
-                <a href="#hebergements" class="selected">Hébergements</a>
+                <a href="#hebergements" s>Hébergements</a>
                 <a href="#activites">Activités</a>
             </nav>
         </header>
@@ -32,8 +32,8 @@
                 <form action="#" method="post">
                     <div><i class="fa-solid fa-location-dot"></i></div>
                     <input type="search" placeholder="Marseille, france">
-                    <button>Rechercher</button>
-
+                    <button class="btn-search">Rechercher</button>
+                    <button class="btn-search-glass"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
                 <div class="filters">
                     <h2 class="section-title">Filtres</h2>
